--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -27,10 +27,10 @@
 
     <!-- Services -->
     <!-- Section Services -->
-    <section id="services" class="py-5 bg-light">
-      <div class="container">
+    <section id="services" class="py-5 bg-light mb-800">
+      <div class="container mb-500">
         <h2 class="text-center mb-5">Nos Services Microsoft 365</h2>
-        <div class="row g-4">
+        <div class="row g-4 mb-120">
           <!-- Service 1 : Migration -->
           <div class="col-md-4">
             <div class="card h-100 shadow-sm border-0">
@@ -95,8 +95,8 @@
       </div>
     </section>
 
+  </body>
 
     <!-- Footer -->
 
-  </body>
 </html>
